# thunder-book

./: .gitignore  README.md
python/: .gitignore  Makefile  README.md  pyproject.toml
python/src/thunder_book/: __init__.py  util.py
python/src/thunder_book/ch03/: README.md  beam_search.py  chokudai_search.py  constants.py  maze_state.py  score_average.py  time_keeper.py
python/src/thunder_book/ch04/: README.md  auto_move_maze_state.py  average_score.py  constants.py  hill_climb.py  random_action.py  simulated_annealing.py
python/src/thunder_book/ch05/: README.md  alpha_beta.py  average_score.py  compare_speed.py  constants.py  iterative_deepening.py  maze_state.py  mini_max.py  mini_max_vs_random.py  monte_carlo.py  (+4 more)
python/tests/ch03/: test_beam_search.py  test_chokudai_search.py  test_maze_state.py  test_score_average.py  test_time_keeper.py
python/tests/ch04/: test_auto_move_maze_state.py  test_average_score.py  test_hill_climb.py  test_random_action.py  test_simulated_annealing.py
python/tests/ch05/: test_alpha_beta.py  test_iterative_deepening.py  test_maze_state.py  test_mini_max.py  test_monte_carlo.py  test_monte_carlo_tree_search.py  test_thunder_search.py
python/tests/ch06/: test_duct.py  test_game.py  test_maze_state.py  test_mcts.py  test_monte_carlo.py  test_random_action.py
python/tests/ch07/: test_beam_search.py  test_game.py  test_maze_state.py  test_multibit.py  test_numpy_state.py  test_random_action.py  test_singlebit.py
python/tests/ch08/: test_bitset.py  test_compare.py  test_game.py  test_maze_state.py  test_random_action.py
(+308 files in other folders)
