[project]
name = "thunder-book"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shota shimizu", email = "shota.shimizu@legalontech.jp" }
]
dependencies = [
    "numpy>=1.24.4",
    "black>=23.12.1",
    "isort>=5.13.2",
    "pytest>=7.4.4",
    "pydantic>=2.5.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.isort]
profile="black"

[tool.hatch.metadata]
allow-direct-references = true
