[project]
name = "thunder-book"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shota shimizu", email = "shota.shimizu@legalontech.jp" }
]
dependencies = [
    "numpy>=1.24.4",
    "pytest>=7.4.4",
    "pydantic>=2.5.3",
    "fire>=0.5.0",
    "freezegun>=1.4.0",
    "tdqm>=0.0.1",
    "jupyterlab>=4.0.11",
    "ruff>=0.2.0",
    "memory_profiler>=0.61.0",
    "matplotlib>=3.7.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.ruff.lint.isort]
known-first-party = ["thunder_book",]


[tool.hatch.metadata]
allow-direct-references = true
